--- a/public/t1a010-loops-Aden.html
+++ b/public/t1a010-loops-Aden.html
@@ -1,1 +1,26 @@
-hi
+<h2 align=center>t1a010-loops-by-Aden.html</h2>
+
+<a href="">Good reference to Javascript Loops</a><br>
+<pre>
+  
+</pre>
+<h4> Example input output code</h4>
+
+Max loops: <input id="myNum01" type=number value="4" ><br>
+
+<input type=button value="Basic For Loop with Decisions" onclick="{
+      document.getElementById('myDiv01').innerHTML =''
+  let myTemp ='' 
+  let myMax = parseInt(document.getElementById('myNum').value)
+
+  for (let myLoop = 0; myLoop < myMax; myLopp++ ){
+     if (myLoop * 2 > myMax){
+      myTemp += ' cool '
+  }
+  myTemp += 'Loopnumber: ' + myLoop + '<br>' 
+  } 
+  document.getElementById('myDiv01').innerHTML = myTemp 
+  }">
+
+
+  <div id="myDiv01">..</div>
