--- a/public/t1a010-loops-Aden.html
+++ b/public/t1a010-loops-Aden.html
@@ -1,26 +1,31 @@
 <h2 align=center>t1a010-loops-by-Aden.html</h2>
 
 <a href="">Good reference to Javascript Loops</a><br>
+
+
+
+<h4> Example input output code</h4>
 <pre>
   
 </pre>
-<h4> Example input output code</h4>
+
+<h4> Example working code</h4>
 
 Max loops: <input id="myNum01" type=number value="4" ><br>
 
 <input type=button value="Basic For Loop with Decisions" onclick="{
-      document.getElementById('myDiv01').innerHTML =''
-  let myTemp ='' 
-  let myMax = parseInt(document.getElementById('myNum').value)
+      document.getElementById('myDiv01').innerHTML = ''
+  let myTemp = '' 
+  
+  let myMax = parseInt(document.getElementById('myNum1').value)
 
-  for (let myLoop = 0; myLoop < myMax; myLopp++ ){
+  for (let myLoop = 0; myLoop < myMax; myLoop++ ){
      if (myLoop * 2 > myMax){
       myTemp += ' cool '
   }
-  myTemp += 'Loopnumber: ' + myLoop + '<br>' 
+  myTemp += 'Loop number: ' + myLoop + '<br>' 
   } 
   document.getElementById('myDiv01').innerHTML = myTemp 
   }">
 
-
-  <div id="myDiv01">..</div>
+  <div id="myDiv01">...</div>
