--- a/public/t1a010-loops-Aden.html
+++ b/public/t1a010-loops-Aden.html
@@ -1,51 +1,66 @@
 <h2 align=center>t1a010-loops-by-Aden.html</h2>
 
-<a href="#" title="Learn more about JavaScript Loops">Excellent Reference on JavaScript Loops</a><br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript Loops Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h4 {
+            margin-top: 20px;
+        }
+        #output {
+            margin-top: 10px;
+            border: 1px solid #ccc;
+            padding: 10px;
+            background-color: #f9f9f9;
+            min-height: 50px;
+        }
+    </style>
+</head>
+<body>
 
-<h4>Example Input and Output Code</h4>
+<h2>JavaScript Loops Reference</h2>
+<p>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Control_flow_and_error_handling#for_statement">Good Reference to JavaScript Loops</a>
+</p>
+
+<h4>Example Input/Output Code</h4>
 <pre>
-// This is a simple demonstration of looping in JavaScript
-// The code iterates based on user input and applies a basic condition.
+  // Input: Number of loops and a weird number
+  // Output: Loop numbers with a decision-based message
 </pre>
 
 <h4>Example Working Code</h4>
 
-<label for="myNum01">Max loops:</label> 
-<input id="myNum01" type="number" value="4" min="1"><br><br>
+Max loops: <input id="myNum01" type="number" value="4"><br>
+Weird number: <input id="myWeird" type="number" value="2"><br><br>
 
-<input 
-  type="button" 
-  value="Run Basic For Loop with Conditions" 
-  onclick="runBasicLoop()"
-><br><br>
+<input type="button" value="Run Basic For Loop with Decisions" onclick="runLoop()">
 
-<div id="myDiv01">Output will appear here...</div>
+<div id="output">Output will appear here...</div>
 
 <script>
-  function runBasicLoop() {
-    // Clear previous output
-    document.getElementById('myDiv01').innerHTML = '';
-    let output = ''; 
+    function runLoop() {
+        const maxLoops = parseInt(document.getElementById('myNum01').value);
+        const weirdNumber = parseInt(document.getElementById('myWeird').value);
+        let output = '';
 
-    // Get the maximum number of loops from the input
-    const maxLoops = parseInt(document.getElementById('myNum01').value);
-
-    // Validate input
-    if (isNaN(maxLoops) || maxLoops < 1) {
-      document.getElementById('myDiv01').innerHTML = 'Please enter a valid positive number.';
-      return;
+        for (let i = 0; i < maxLoops; i++) {
+            if (i * 2 > weirdNumber) {
+                output += 'Cool! ';
+            }
+            output += 'Loop number: ' + i + '<br>';
+        }
+        
+        document.getElementById('output').innerHTML = output;
     }
-
-    // Loop through the specified number of times
-    for (let loopIndex = 0; loopIndex < maxLoops; loopIndex++) {
-      // Check a condition to add special text
-      if (loopIndex * 2 > maxLoops) {
-        output += 'Cool! ';
-      }
-      output += 'Loop number: ' + loopIndex + '<br>'; 
-    } 
-
-    // Display the output
-    document.getElementById('myDiv01').innerHTML = output; 
-  }
 </script>
+
+</body>
+</html>
