--- a/public/t1a010-loops-Aden.html
+++ b/public/t1a010-loops-Aden.html
@@ -81,3 +81,95 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript Loops Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f0f0f0;
+        }
+        h2, h4 {
+            color: #333;
+        }
+        h4 {
+            margin-top: 20px;
+        }
+        #output {
+            margin-top: 10px;
+            border: 1px solid #ccc;
+            padding: 10px;
+            background-color: #ffffff;
+            min-height: 50px;
+            border-radius: 5px;
+        }
+        input[type="number"], input[type="button"] {
+            margin-top: 10px;
+            padding: 8px;
+            font-size: 16px;
+        }
+        input[type="button"] {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        input[type="button"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+
+<h2>JavaScript Loops Example</h2>
+<p>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Control_flow_and_error_handling#for_statement" target="_blank">Good Reference to JavaScript Loops</a>
+</p>
+
+<h4>Input Values</h4>
+<p>Set the maximum number of loops and a reference number:</p>
+<p>Max Loop Count: <input id="myNum01" type="number" value="4" min="1" aria-label="Maximum number of loops" /></p>
+<p>Weird Number: <input id="myWeird" type="number" value="2" min="0" aria-label="Weird number" /></p>
+<input type="button" value="Run Loops" onclick="runLoops()">
+
+<h4>Output</h4>
+<div id="output" aria-live="polite">Output will appear here...</div>
+
+<script>
+    function runLoops() {
+        // Get values from input fields
+        const maxLoops = parseInt(document.getElementById('myNum01').value);
+        const weirdNumber = parseInt(document.getElementById('myWeird').value);
+        let output = '';
+
+        // For Loop
+        output += '<strong>For Loop Output:</strong><br>';
+        for (let i = 0; i < maxLoops; i++) {
+            if (i * 2 > weirdNumber) {
+                output += 'Cool! '; // Decision-based message
+            }
+            output += 'For Loop number: ' + i + '<br>'; // Display loop number
+        }
+
+        // While Loop
+        output += '<br><strong>While Loop Output:</strong><br>';
+        let j = 0;
+        while (j < maxLoops) {
+            if (j % 2 === 0) {
+                output += 'Even iteration: ' + j + '<br>'; // Display if the iteration index is even
+            }
+            j += 2; // Increment by 2
+        }
+        
+        // Output results to the designated section
+        document.getElementById('output').innerHTML = output;
+    }
+</script>
+
+</body>
+</html>
