--- a/public/t1a07-functions-Aden.html
+++ b/public/t1a07-functions-Aden.html
@@ -340,7 +340,7 @@
 </script>
 
 </body>
-</html></h1>
+</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -500,3 +500,4 @@
 
 </body>
 </html>
+</h1>
