--- a/public/t1a010-loops-Aden.html
+++ b/public/t1a010-loops-Aden.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Loops Example</title>
+    <title>Loops Example</title>
     <style>
         body {
             font-family: Arial, sans-serif;
