--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,8 @@ Aden
         <li><a href="timer-time.html">timer-time.html</a></li>
         <li><a href="snake.html">snake.html</a></li>
      <li><a href="something.html">something.html</a></li> 
-    </ol>
+        <li><a href="Testing-page.html">Testing-page.html</a></li> 
+     </ol>
 </body>
 
 </html>
