--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -113,3 +113,42 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loop Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        ul {
+            list-style-type: none;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Items List</h1>
+    <ul id="itemList"></ul>
+
+    <script>
+        // Array of items to display
+        const items = ['Apple', 'Banana', 'Cherry', 'Date', 'Elderberry'];
+
+        // Get the UL element where the list items will be added
+        const itemList = document.getElementById('itemList');
+
+        // Loop through the array of items
+        for (let i = 0; i < items.length; i++) {
+            // Create a new list item
+            const listItem = document.createElement('li');
+            // Set the text content of the list item
+            listItem.textContent = items[i];
+            // Append the list item to the UL
+            itemList.appendChild(listItem);
+        }
+    </script>
+</body>
+</html>
