--- a/public/something.html
+++ b/public/something.html
@@ -439,7 +439,7 @@
         let guessedLetters = [];
         
         function startHangman() {
-            const words = ["javascript", "html", "css", "programming", "developer"];
+            const words = ["Banana", "Computer", "Teacher", "programming", "developer"];
             hangmanWord = words[Math.floor(Math.random() * words.length)];
             guessedLetters = [];
             document.getElementById('hangmanFeedback').innerText = '';
